lab2/src/syntax.output
状态 24conflicts: 1 shift/reduce
状态 29conflicts: 1 shift/reduce
状态 52conflicts: 1 shift/reduce


语法

    0 $accept: Program $end

    1 Program: ExtDefList

    2 ExtDefList: ExtDef ExtDefList
    3           | %empty

    4 ExtDef: Specifier ExtDecList SEMI
    5       | Specifier SEMI
    6       | Specifier FunDec CompSt

    7 ExtDecList: VarDec
    8           | VarDec COMMA ExtDecList

    9 Specifier: TYPE
   10          | StructSpecifier

   11 StructSpecifier: STRUCT OptTag LC DefList RC
   12                | STRUCT Tag

   13 OptTag: ID
   14       | %empty

   15 Tag: ID

   16 VarDec: ID
   17       | VarDec LB INT RB

   18 FunDec: ID LP VarList RP
   19       | ID LP RP

   20 VarList: ParamDec COMMA VarList
   21        | ParamDec

   22 ParamDec: Specifier VarDec

   23 CompSt: LC DefList StmtList RC
   24       | error RC

   25 StmtList: Stmt StmtList
   26         | %empty

   27 Stmt: Exp SEMI
   28     | CompSt
   29     | RETURN Exp SEMI
   30     | IF LP Exp RP Stmt
   31     | IF LP Exp RP Stmt ELSE Stmt
   32     | WHILE LP Exp RP Stmt
   33     | error SEMI

   34 DefList: Def DefList
   35        | %empty

   36 Def: Specifier DecList SEMI
   37    | error SEMI

   38 DecList: Dec
   39        | Dec COMMA DecList

   40 Dec: VarDec
   41    | VarDec ASSIGNOP Exp

   42 Exp: Exp ASSIGNOP Exp
   43    | Exp AND Exp
   44    | Exp OR Exp
   45    | Exp RELOP Exp
   46    | Exp PLUS Exp
   47    | Exp MINUS Exp
   48    | Exp STAR Exp
   49    | Exp DIV Exp
   50    | LP Exp LP
   51    | MINUS Exp
   52    | NOT Exp
   53    | ID LP Args RP
   54    | ID LP RP
   55    | Exp LB Exp RB
   56    | Exp DOT ID
   57    | ID
   58    | INT
   59    | FLOAT
   60    | error RP

   61 Args: Exp COMMA Args
   62     | Exp


Terminals, with rules where they appear

$end (0) 0
error (256) 24 33 37 60
INT (258) 17 58
FLOAT (259) 59
ID (260) 13 15 16 18 19 53 54 56 57
SEMI (261) 4 5 27 29 33 36 37
COMMA (262) 8 20 39 61
LC (263) 11 23
RC (264) 11 23 24
ASSIGNOP (265) 41 42
OR (266) 44
AND (267) 43
RELOP (268) 45
PLUS (269) 46
MINUS (270) 47 51
STAR (271) 48
DIV (272) 49
NOT (273) 52
DOT (274) 56
LP (275) 18 19 30 31 32 50 53 54
RP (276) 18 19 30 31 32 53 54 60
LB (277) 17 55
RB (278) 17 55
TYPE (279) 9
STRUCT (280) 11 12
RETURN (281) 29
IF (282) 30 31
WHILE (283) 32
LOWER_THAN_ELSE (284)
ELSE (285) 31


Nonterminals, with rules where they appear

$accept (31)
    on left: 0
Program (32)
    on left: 1, on right: 0
ExtDefList (33)
    on left: 2 3, on right: 1 2
ExtDef (34)
    on left: 4 5 6, on right: 2
ExtDecList (35)
    on left: 7 8, on right: 4 8
Specifier (36)
    on left: 9 10, on right: 4 5 6 22 36
StructSpecifier (37)
    on left: 11 12, on right: 10
OptTag (38)
    on left: 13 14, on right: 11
Tag (39)
    on left: 15, on right: 12
VarDec (40)
    on left: 16 17, on right: 7 8 17 22 40 41
FunDec (41)
    on left: 18 19, on right: 6
VarList (42)
    on left: 20 21, on right: 18 20
ParamDec (43)
    on left: 22, on right: 20 21
CompSt (44)
    on left: 23 24, on right: 6 28
StmtList (45)
    on left: 25 26, on right: 23 25
Stmt (46)
    on left: 27 28 29 30 31 32 33, on right: 25 30 31 32
DefList (47)
    on left: 34 35, on right: 11 23 34
Def (48)
    on left: 36 37, on right: 34
DecList (49)
    on left: 38 39, on right: 36 39
Dec (50)
    on left: 40 41, on right: 38 39
Exp (51)
    on left: 42 43 44 45 46 47 48 49 50 51 52 53 54 55 56 57 58 59
    60, on right: 27 29 30 31 32 41 42 43 44 45 46 47 48 49 50 51 52
    55 56 61 62
Args (52)
    on left: 61 62, on right: 53 61


State 0

    0 $accept: . Program $end

    TYPE    shift, and go to state 1
    STRUCT  shift, and go to state 2

    $default  reduce using rule 3 (ExtDefList)

    Program          转到状态 3
    ExtDefList       转到状态 4
    ExtDef           转到状态 5
    Specifier        转到状态 6
    StructSpecifier  转到状态 7


State 1

    9 Specifier: TYPE .

    $default  reduce using rule 9 (Specifier)


State 2

   11 StructSpecifier: STRUCT . OptTag LC DefList RC
   12                | STRUCT . Tag

    ID  shift, and go to state 8

    $default  reduce using rule 14 (OptTag)

    OptTag  转到状态 9
    Tag     转到状态 10


State 3

    0 $accept: Program . $end

    $end  shift, and go to state 11


State 4

    1 Program: ExtDefList .

    $default  reduce using rule 1 (Program)


State 5

    2 ExtDefList: ExtDef . ExtDefList

    TYPE    shift, and go to state 1
    STRUCT  shift, and go to state 2

    $default  reduce using rule 3 (ExtDefList)

    ExtDefList       转到状态 12
    ExtDef           转到状态 5
    Specifier        转到状态 6
    StructSpecifier  转到状态 7


State 6

    4 ExtDef: Specifier . ExtDecList SEMI
    5       | Specifier . SEMI
    6       | Specifier . FunDec CompSt

    ID    shift, and go to state 13
    SEMI  shift, and go to state 14

    ExtDecList  转到状态 15
    VarDec      转到状态 16
    FunDec      转到状态 17


State 7

   10 Specifier: StructSpecifier .

    $default  reduce using rule 10 (Specifier)


State 8

   13 OptTag: ID .
   15 Tag: ID .

    LC        reduce using rule 13 (OptTag)
    $default  reduce using rule 15 (Tag)


State 9

   11 StructSpecifier: STRUCT OptTag . LC DefList RC

    LC  shift, and go to state 18


State 10

   12 StructSpecifier: STRUCT Tag .

    $default  reduce using rule 12 (StructSpecifier)


State 11

    0 $accept: Program $end .

    $default  接受


State 12

    2 ExtDefList: ExtDef ExtDefList .

    $default  reduce using rule 2 (ExtDefList)


State 13

   16 VarDec: ID .
   18 FunDec: ID . LP VarList RP
   19       | ID . LP RP

    LP  shift, and go to state 19

    $default  reduce using rule 16 (VarDec)


State 14

    5 ExtDef: Specifier SEMI .

    $default  reduce using rule 5 (ExtDef)


State 15

    4 ExtDef: Specifier ExtDecList . SEMI

    SEMI  shift, and go to state 20


State 16

    7 ExtDecList: VarDec .
    8           | VarDec . COMMA ExtDecList
   17 VarDec: VarDec . LB INT RB

    COMMA  shift, and go to state 21
    LB     shift, and go to state 22

    $default  reduce using rule 7 (ExtDecList)


State 17

    6 ExtDef: Specifier FunDec . CompSt

    error  shift, and go to state 23
    LC     shift, and go to state 24

    CompSt  转到状态 25


State 18

   11 StructSpecifier: STRUCT OptTag LC . DefList RC

    error   shift, and go to state 26
    TYPE    shift, and go to state 1
    STRUCT  shift, and go to state 2

    RC  reduce using rule 35 (DefList)

    Specifier        转到状态 27
    StructSpecifier  转到状态 7
    DefList          转到状态 28
    Def              转到状态 29


State 19

   18 FunDec: ID LP . VarList RP
   19       | ID LP . RP

    RP      shift, and go to state 30
    TYPE    shift, and go to state 1
    STRUCT  shift, and go to state 2

    Specifier        转到状态 31
    StructSpecifier  转到状态 7
    VarList          转到状态 32
    ParamDec         转到状态 33


State 20

    4 ExtDef: Specifier ExtDecList SEMI .

    $default  reduce using rule 4 (ExtDef)


State 21

    8 ExtDecList: VarDec COMMA . ExtDecList

    ID  shift, and go to state 34

    ExtDecList  转到状态 35
    VarDec      转到状态 16


State 22

   17 VarDec: VarDec LB . INT RB

    INT  shift, and go to state 36


State 23

   24 CompSt: error . RC

    RC  shift, and go to state 37


State 24

   23 CompSt: LC . DefList StmtList RC

    error   shift, and go to state 26
    TYPE    shift, and go to state 1
    STRUCT  shift, and go to state 2

    error   [reduce using rule 35 (DefList)]
    INT     reduce using rule 35 (DefList)
    FLOAT   reduce using rule 35 (DefList)
    ID      reduce using rule 35 (DefList)
    LC      reduce using rule 35 (DefList)
    RC      reduce using rule 35 (DefList)
    MINUS   reduce using rule 35 (DefList)
    NOT     reduce using rule 35 (DefList)
    LP      reduce using rule 35 (DefList)
    RETURN  reduce using rule 35 (DefList)
    IF      reduce using rule 35 (DefList)
    WHILE   reduce using rule 35 (DefList)

    Specifier        转到状态 27
    StructSpecifier  转到状态 7
    DefList          转到状态 38
    Def              转到状态 29


State 25

    6 ExtDef: Specifier FunDec CompSt .

    $default  reduce using rule 6 (ExtDef)


State 26

   37 Def: error . SEMI

    SEMI  shift, and go to state 39


State 27

   36 Def: Specifier . DecList SEMI

    ID  shift, and go to state 34

    VarDec   转到状态 40
    DecList  转到状态 41
    Dec      转到状态 42


State 28

   11 StructSpecifier: STRUCT OptTag LC DefList . RC

    RC  shift, and go to state 43


State 29

   34 DefList: Def . DefList

    error   shift, and go to state 26
    TYPE    shift, and go to state 1
    STRUCT  shift, and go to state 2

    error   [reduce using rule 35 (DefList)]
    INT     reduce using rule 35 (DefList)
    FLOAT   reduce using rule 35 (DefList)
    ID      reduce using rule 35 (DefList)
    LC      reduce using rule 35 (DefList)
    RC      reduce using rule 35 (DefList)
    MINUS   reduce using rule 35 (DefList)
    NOT     reduce using rule 35 (DefList)
    LP      reduce using rule 35 (DefList)
    RETURN  reduce using rule 35 (DefList)
    IF      reduce using rule 35 (DefList)
    WHILE   reduce using rule 35 (DefList)

    Specifier        转到状态 27
    StructSpecifier  转到状态 7
    DefList          转到状态 44
    Def              转到状态 29


State 30

   19 FunDec: ID LP RP .

    $default  reduce using rule 19 (FunDec)


State 31

   22 ParamDec: Specifier . VarDec

    ID  shift, and go to state 34

    VarDec  转到状态 45


State 32

   18 FunDec: ID LP VarList . RP

    RP  shift, and go to state 46


State 33

   20 VarList: ParamDec . COMMA VarList
   21        | ParamDec .

    COMMA  shift, and go to state 47

    $default  reduce using rule 21 (VarList)


State 34

   16 VarDec: ID .

    $default  reduce using rule 16 (VarDec)


State 35

    8 ExtDecList: VarDec COMMA ExtDecList .

    $default  reduce using rule 8 (ExtDecList)


State 36

   17 VarDec: VarDec LB INT . RB

    RB  shift, and go to state 48


State 37

   24 CompSt: error RC .

    $default  reduce using rule 24 (CompSt)


State 38

   23 CompSt: LC DefList . StmtList RC

    error   shift, and go to state 49
    INT     shift, and go to state 50
    FLOAT   shift, and go to state 51
    ID      shift, and go to state 52
    LC      shift, and go to state 24
    MINUS   shift, and go to state 53
    NOT     shift, and go to state 54
    LP      shift, and go to state 55
    RETURN  shift, and go to state 56
    IF      shift, and go to state 57
    WHILE   shift, and go to state 58

    RC  reduce using rule 26 (StmtList)

    CompSt    转到状态 59
    StmtList  转到状态 60
    Stmt      转到状态 61
    Exp       转到状态 62


State 39

   37 Def: error SEMI .

    $default  reduce using rule 37 (Def)


State 40

   17 VarDec: VarDec . LB INT RB
   40 Dec: VarDec .
   41    | VarDec . ASSIGNOP Exp

    ASSIGNOP  shift, and go to state 63
    LB        shift, and go to state 22

    $default  reduce using rule 40 (Dec)


State 41

   36 Def: Specifier DecList . SEMI

    SEMI  shift, and go to state 64


State 42

   38 DecList: Dec .
   39        | Dec . COMMA DecList

    COMMA  shift, and go to state 65

    $default  reduce using rule 38 (DecList)


State 43

   11 StructSpecifier: STRUCT OptTag LC DefList RC .

    $default  reduce using rule 11 (StructSpecifier)


State 44

   34 DefList: Def DefList .

    $default  reduce using rule 34 (DefList)


State 45

   17 VarDec: VarDec . LB INT RB
   22 ParamDec: Specifier VarDec .

    LB  shift, and go to state 22

    $default  reduce using rule 22 (ParamDec)


State 46

   18 FunDec: ID LP VarList RP .

    $default  reduce using rule 18 (FunDec)


State 47

   20 VarList: ParamDec COMMA . VarList

    TYPE    shift, and go to state 1
    STRUCT  shift, and go to state 2

    Specifier        转到状态 31
    StructSpecifier  转到状态 7
    VarList          转到状态 66
    ParamDec         转到状态 33


State 48

   17 VarDec: VarDec LB INT RB .

    $default  reduce using rule 17 (VarDec)


State 49

   24 CompSt: error . RC
   33 Stmt: error . SEMI
   60 Exp: error . RP

    SEMI  shift, and go to state 67
    RC    shift, and go to state 37
    RP    shift, and go to state 68


State 50

   58 Exp: INT .

    $default  reduce using rule 58 (Exp)


State 51

   59 Exp: FLOAT .

    $default  reduce using rule 59 (Exp)


State 52

   53 Exp: ID . LP Args RP
   54    | ID . LP RP
   57    | ID .

    LP  shift, and go to state 69

    LP        [reduce using rule 57 (Exp)]
    $default  reduce using rule 57 (Exp)


State 53

   51 Exp: MINUS . Exp

    error  shift, and go to state 70
    INT    shift, and go to state 50
    FLOAT  shift, and go to state 51
    ID     shift, and go to state 52
    MINUS  shift, and go to state 53
    NOT    shift, and go to state 54
    LP     shift, and go to state 55

    Exp  转到状态 71


State 54

   52 Exp: NOT . Exp

    error  shift, and go to state 70
    INT    shift, and go to state 50
    FLOAT  shift, and go to state 51
    ID     shift, and go to state 52
    MINUS  shift, and go to state 53
    NOT    shift, and go to state 54
    LP     shift, and go to state 55

    Exp  转到状态 72


State 55

   50 Exp: LP . Exp LP

    error  shift, and go to state 70
    INT    shift, and go to state 50
    FLOAT  shift, and go to state 51
    ID     shift, and go to state 52
    MINUS  shift, and go to state 53
    NOT    shift, and go to state 54
    LP     shift, and go to state 55

    Exp  转到状态 73


State 56

   29 Stmt: RETURN . Exp SEMI

    error  shift, and go to state 70
    INT    shift, and go to state 50
    FLOAT  shift, and go to state 51
    ID     shift, and go to state 52
    MINUS  shift, and go to state 53
    NOT    shift, and go to state 54
    LP     shift, and go to state 55

    Exp  转到状态 74


State 57

   30 Stmt: IF . LP Exp RP Stmt
   31     | IF . LP Exp RP Stmt ELSE Stmt

    LP  shift, and go to state 75


State 58

   32 Stmt: WHILE . LP Exp RP Stmt

    LP  shift, and go to state 76


State 59

   28 Stmt: CompSt .

    $default  reduce using rule 28 (Stmt)


State 60

   23 CompSt: LC DefList StmtList . RC

    RC  shift, and go to state 77


State 61

   25 StmtList: Stmt . StmtList

    error   shift, and go to state 49
    INT     shift, and go to state 50
    FLOAT   shift, and go to state 51
    ID      shift, and go to state 52
    LC      shift, and go to state 24
    MINUS   shift, and go to state 53
    NOT     shift, and go to state 54
    LP      shift, and go to state 55
    RETURN  shift, and go to state 56
    IF      shift, and go to state 57
    WHILE   shift, and go to state 58

    RC  reduce using rule 26 (StmtList)

    CompSt    转到状态 59
    StmtList  转到状态 78
    Stmt      转到状态 61
    Exp       转到状态 62


State 62

   27 Stmt: Exp . SEMI
   42 Exp: Exp . ASSIGNOP Exp
   43    | Exp . AND Exp
   44    | Exp . OR Exp
   45    | Exp . RELOP Exp
   46    | Exp . PLUS Exp
   47    | Exp . MINUS Exp
   48    | Exp . STAR Exp
   49    | Exp . DIV Exp
   55    | Exp . LB Exp RB
   56    | Exp . DOT ID

    SEMI      shift, and go to state 79
    ASSIGNOP  shift, and go to state 80
    OR        shift, and go to state 81
    AND       shift, and go to state 82
    RELOP     shift, and go to state 83
    PLUS      shift, and go to state 84
    MINUS     shift, and go to state 85
    STAR      shift, and go to state 86
    DIV       shift, and go to state 87
    DOT       shift, and go to state 88
    LB        shift, and go to state 89


State 63

   41 Dec: VarDec ASSIGNOP . Exp

    error  shift, and go to state 70
    INT    shift, and go to state 50
    FLOAT  shift, and go to state 51
    ID     shift, and go to state 52
    MINUS  shift, and go to state 53
    NOT    shift, and go to state 54
    LP     shift, and go to state 55

    Exp  转到状态 90


State 64

   36 Def: Specifier DecList SEMI .

    $default  reduce using rule 36 (Def)


State 65

   39 DecList: Dec COMMA . DecList

    ID  shift, and go to state 34

    VarDec   转到状态 40
    DecList  转到状态 91
    Dec      转到状态 42


State 66

   20 VarList: ParamDec COMMA VarList .

    $default  reduce using rule 20 (VarList)


State 67

   33 Stmt: error SEMI .

    $default  reduce using rule 33 (Stmt)


State 68

   60 Exp: error RP .

    $default  reduce using rule 60 (Exp)


State 69

   53 Exp: ID LP . Args RP
   54    | ID LP . RP

    error  shift, and go to state 70
    INT    shift, and go to state 50
    FLOAT  shift, and go to state 51
    ID     shift, and go to state 52
    MINUS  shift, and go to state 53
    NOT    shift, and go to state 54
    LP     shift, and go to state 55
    RP     shift, and go to state 92

    Exp   转到状态 93
    Args  转到状态 94


State 70

   60 Exp: error . RP

    RP  shift, and go to state 68


State 71

   42 Exp: Exp . ASSIGNOP Exp
   43    | Exp . AND Exp
   44    | Exp . OR Exp
   45    | Exp . RELOP Exp
   46    | Exp . PLUS Exp
   47    | Exp . MINUS Exp
   48    | Exp . STAR Exp
   49    | Exp . DIV Exp
   51    | MINUS Exp .
   55    | Exp . LB Exp RB
   56    | Exp . DOT ID

    STAR  shift, and go to state 86
    DIV   shift, and go to state 87
    DOT   shift, and go to state 88
    LB    shift, and go to state 89

    $default  reduce using rule 51 (Exp)


State 72

   42 Exp: Exp . ASSIGNOP Exp
   43    | Exp . AND Exp
   44    | Exp . OR Exp
   45    | Exp . RELOP Exp
   46    | Exp . PLUS Exp
   47    | Exp . MINUS Exp
   48    | Exp . STAR Exp
   49    | Exp . DIV Exp
   52    | NOT Exp .
   55    | Exp . LB Exp RB
   56    | Exp . DOT ID

    DOT  shift, and go to state 88
    LB   shift, and go to state 89

    $default  reduce using rule 52 (Exp)


State 73

   42 Exp: Exp . ASSIGNOP Exp
   43    | Exp . AND Exp
   44    | Exp . OR Exp
   45    | Exp . RELOP Exp
   46    | Exp . PLUS Exp
   47    | Exp . MINUS Exp
   48    | Exp . STAR Exp
   49    | Exp . DIV Exp
   50    | LP Exp . LP
   55    | Exp . LB Exp RB
   56    | Exp . DOT ID

    ASSIGNOP  shift, and go to state 80
    OR        shift, and go to state 81
    AND       shift, and go to state 82
    RELOP     shift, and go to state 83
    PLUS      shift, and go to state 84
    MINUS     shift, and go to state 85
    STAR      shift, and go to state 86
    DIV       shift, and go to state 87
    DOT       shift, and go to state 88
    LP        shift, and go to state 95
    LB        shift, and go to state 89


State 74

   29 Stmt: RETURN Exp . SEMI
   42 Exp: Exp . ASSIGNOP Exp
   43    | Exp . AND Exp
   44    | Exp . OR Exp
   45    | Exp . RELOP Exp
   46    | Exp . PLUS Exp
   47    | Exp . MINUS Exp
   48    | Exp . STAR Exp
   49    | Exp . DIV Exp
   55    | Exp . LB Exp RB
   56    | Exp . DOT ID

    SEMI      shift, and go to state 96
    ASSIGNOP  shift, and go to state 80
    OR        shift, and go to state 81
    AND       shift, and go to state 82
    RELOP     shift, and go to state 83
    PLUS      shift, and go to state 84
    MINUS     shift, and go to state 85
    STAR      shift, and go to state 86
    DIV       shift, and go to state 87
    DOT       shift, and go to state 88
    LB        shift, and go to state 89


State 75

   30 Stmt: IF LP . Exp RP Stmt
   31     | IF LP . Exp RP Stmt ELSE Stmt

    error  shift, and go to state 70
    INT    shift, and go to state 50
    FLOAT  shift, and go to state 51
    ID     shift, and go to state 52
    MINUS  shift, and go to state 53
    NOT    shift, and go to state 54
    LP     shift, and go to state 55

    Exp  转到状态 97


State 76

   32 Stmt: WHILE LP . Exp RP Stmt

    error  shift, and go to state 70
    INT    shift, and go to state 50
    FLOAT  shift, and go to state 51
    ID     shift, and go to state 52
    MINUS  shift, and go to state 53
    NOT    shift, and go to state 54
    LP     shift, and go to state 55

    Exp  转到状态 98


State 77

   23 CompSt: LC DefList StmtList RC .

    $default  reduce using rule 23 (CompSt)


State 78

   25 StmtList: Stmt StmtList .

    $default  reduce using rule 25 (StmtList)


State 79

   27 Stmt: Exp SEMI .

    $default  reduce using rule 27 (Stmt)


State 80

   42 Exp: Exp ASSIGNOP . Exp

    error  shift, and go to state 70
    INT    shift, and go to state 50
    FLOAT  shift, and go to state 51
    ID     shift, and go to state 52
    MINUS  shift, and go to state 53
    NOT    shift, and go to state 54
    LP     shift, and go to state 55

    Exp  转到状态 99


State 81

   44 Exp: Exp OR . Exp

    error  shift, and go to state 70
    INT    shift, and go to state 50
    FLOAT  shift, and go to state 51
    ID     shift, and go to state 52
    MINUS  shift, and go to state 53
    NOT    shift, and go to state 54
    LP     shift, and go to state 55

    Exp  转到状态 100


State 82

   43 Exp: Exp AND . Exp

    error  shift, and go to state 70
    INT    shift, and go to state 50
    FLOAT  shift, and go to state 51
    ID     shift, and go to state 52
    MINUS  shift, and go to state 53
    NOT    shift, and go to state 54
    LP     shift, and go to state 55

    Exp  转到状态 101


State 83

   45 Exp: Exp RELOP . Exp

    error  shift, and go to state 70
    INT    shift, and go to state 50
    FLOAT  shift, and go to state 51
    ID     shift, and go to state 52
    MINUS  shift, and go to state 53
    NOT    shift, and go to state 54
    LP     shift, and go to state 55

    Exp  转到状态 102


State 84

   46 Exp: Exp PLUS . Exp

    error  shift, and go to state 70
    INT    shift, and go to state 50
    FLOAT  shift, and go to state 51
    ID     shift, and go to state 52
    MINUS  shift, and go to state 53
    NOT    shift, and go to state 54
    LP     shift, and go to state 55

    Exp  转到状态 103


State 85

   47 Exp: Exp MINUS . Exp

    error  shift, and go to state 70
    INT    shift, and go to state 50
    FLOAT  shift, and go to state 51
    ID     shift, and go to state 52
    MINUS  shift, and go to state 53
    NOT    shift, and go to state 54
    LP     shift, and go to state 55

    Exp  转到状态 104


State 86

   48 Exp: Exp STAR . Exp

    error  shift, and go to state 70
    INT    shift, and go to state 50
    FLOAT  shift, and go to state 51
    ID     shift, and go to state 52
    MINUS  shift, and go to state 53
    NOT    shift, and go to state 54
    LP     shift, and go to state 55

    Exp  转到状态 105


State 87

   49 Exp: Exp DIV . Exp

    error  shift, and go to state 70
    INT    shift, and go to state 50
    FLOAT  shift, and go to state 51
    ID     shift, and go to state 52
    MINUS  shift, and go to state 53
    NOT    shift, and go to state 54
    LP     shift, and go to state 55

    Exp  转到状态 106


State 88

   56 Exp: Exp DOT . ID

    ID  shift, and go to state 107


State 89

   55 Exp: Exp LB . Exp RB

    error  shift, and go to state 70
    INT    shift, and go to state 50
    FLOAT  shift, and go to state 51
    ID     shift, and go to state 52
    MINUS  shift, and go to state 53
    NOT    shift, and go to state 54
    LP     shift, and go to state 55

    Exp  转到状态 108


State 90

   41 Dec: VarDec ASSIGNOP Exp .
   42 Exp: Exp . ASSIGNOP Exp
   43    | Exp . AND Exp
   44    | Exp . OR Exp
   45    | Exp . RELOP Exp
   46    | Exp . PLUS Exp
   47    | Exp . MINUS Exp
   48    | Exp . STAR Exp
   49    | Exp . DIV Exp
   55    | Exp . LB Exp RB
   56    | Exp . DOT ID

    ASSIGNOP  shift, and go to state 80
    OR        shift, and go to state 81
    AND       shift, and go to state 82
    RELOP     shift, and go to state 83
    PLUS      shift, and go to state 84
    MINUS     shift, and go to state 85
    STAR      shift, and go to state 86
    DIV       shift, and go to state 87
    DOT       shift, and go to state 88
    LB        shift, and go to state 89

    $default  reduce using rule 41 (Dec)


State 91

   39 DecList: Dec COMMA DecList .

    $default  reduce using rule 39 (DecList)


State 92

   54 Exp: ID LP RP .

    $default  reduce using rule 54 (Exp)


State 93

   42 Exp: Exp . ASSIGNOP Exp
   43    | Exp . AND Exp
   44    | Exp . OR Exp
   45    | Exp . RELOP Exp
   46    | Exp . PLUS Exp
   47    | Exp . MINUS Exp
   48    | Exp . STAR Exp
   49    | Exp . DIV Exp
   55    | Exp . LB Exp RB
   56    | Exp . DOT ID
   61 Args: Exp . COMMA Args
   62     | Exp .

    COMMA     shift, and go to state 109
    ASSIGNOP  shift, and go to state 80
    OR        shift, and go to state 81
    AND       shift, and go to state 82
    RELOP     shift, and go to state 83
    PLUS      shift, and go to state 84
    MINUS     shift, and go to state 85
    STAR      shift, and go to state 86
    DIV       shift, and go to state 87
    DOT       shift, and go to state 88
    LB        shift, and go to state 89

    $default  reduce using rule 62 (Args)


State 94

   53 Exp: ID LP Args . RP

    RP  shift, and go to state 110


State 95

   50 Exp: LP Exp LP .

    $default  reduce using rule 50 (Exp)


State 96

   29 Stmt: RETURN Exp SEMI .

    $default  reduce using rule 29 (Stmt)


State 97
